--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </header>
 
     <section class="ikonki-tylko-tel">
-        <p class="pop">facebook</p>
         <div class="mpun facebook obdyp">
         <a href="https://www.facebook.com/SargeThePlayer" target="_blank">
             <i class="fab fa-facebook-f"></i>
@@ -55,7 +54,6 @@
             <i class="fab fa-instagram"></i>
         </a>
         </div>       
-        <p class="pop">instagram</p>
     </section>
     </section>
     <main>
@@ -98,7 +96,7 @@
                 </div>
                 </div>
                 <div class="obraz-edukacjia">
-                    <img src="./zd_daw/edukacja_2.jpg" alt="Slider">
+                    <img src="./zd_daw/edukacja_2.jpg" alt="Slider" class="adadad">
                 </div>
             </div>
         </section>
@@ -204,3 +202,4 @@ Ta galeria nie próbuje niczego udowadniać ani sprzedawać. To raczej cichy zap
     <script src="script.js"></script>
 </body>
 </html>
+
