Fix HTML structure and language attributes

--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -17,7 +17,7 @@
 </head>
 <body class="body2">
     <main class="main2">
-        <div class="powrot"><a class="a2" href="./index.html.html">x</a></div>
+        <div class="powrot"><a class="a2" href="./index.html">x</a></div>
         <h1 class="prh1">Polityka prywatności</h1>
 
         <p class="p-pp">Administratorem danych osobowych jest podmiot ja. Kontakt: <a href="mailto:twojemail@example.com">twojemail@example.com</a>.</p>
